--- a/Max-Electric-HTML/index.html
+++ b/Max-Electric-HTML/index.html
@@ -555,7 +555,7 @@
 						<aside class="widget widget_info">
 							<h3 class="widget-title">Info</h3>
 							<p>You may contact us during working timing</p>
-							<p><i class="icon icon-Phone2"></i> <span>Tel</span><a href="tel:1234-678-9011" title=": 1234_5678_190"> : 020 8841 1221 </a></p>
+							<p><i class="icon icon-Phone2"></i> <span>Tel</span><a href="tel:020-8841-1211" title=": 020 8841 1221"> : 020 8841 1221 </a></p>
 							<p><i class="icon icon-Mail"></i> <span>Email</span><a href="mailto:eec177@gmail.com" title=": eec177@gmail.com"> : eec177@gmail.com</a></p>
 							<p><i class="icon icon-Time"></i> <span>Working Hours </span> : 8:00 a.m - 17:30 p.m</p>
 						</aside>
