about us section

--- a/Max-Electric-HTML/index.html
+++ b/Max-Electric-HTML/index.html
@@ -430,14 +430,14 @@
 							<p>From lighting and cables to circuit protection and tools, we supply everything professionals need to get the job done right.</p>
 						</div>
 						<div class="about-box">
-							<h5><i class="icon icon-Tools"></i>We Offer Quality Work</h5>
+							<h5><i class="icon icon-Tools"></i>We Offer Quality Services</h5>
 							<p>Quality is at the core of everything we do — from the products we supply to the services we deliver.</p>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 about-content-right">
 						<div class="about-box">
 							<h5><i class="icon icon-Users"></i>Dedicated Team</h5>
-							<p>Driven by expertise and passion, our team ensures every project is completed to the highest standard.</p>
+							<p>Driven by expertise and passion, our team ensures every order is completed to the highest standard.</p>
 						</div>
 						<div class="about-box">
 							<h5><i class="icon icon-Time"></i>Avilability</h5>
