--- a/Max-Electric-HTML/index.html
+++ b/Max-Electric-HTML/index.html
@@ -543,10 +543,10 @@
 							<h3 class="widget-title">our services</h3>
 							<ul>
 								<li><a href="#" title="Digital multimeter">Lights</a></li>
-								<li><a href="#" title="Impact driller">Lights</a></li>
-								<li><a href="#" title="Angle Grinder">Lights</a></li>
-								<li><a href="#" title="Grip wrench">Lights</a></li>
-								<li><a href="#" title="Soldering Kit">Lights</a></li>
+								<li><a href="#" title="Impact driller">Switches</a></li>
+								<li><a href="#" title="Angle Grinder">Sockets</a></li>
+								<li><a href="#" title="Grip wrench">Cables</a></li>
+								<li><a href="#" title="Soldering Kit">Tools</a></li>
 							</ul>
 						</aside>
 					</div><!-- Widget Links /- -->
