--- a/Max-Electric-HTML/index.html
+++ b/Max-Electric-HTML/index.html
@@ -440,7 +440,7 @@
 							<p>Driven by expertise and passion, our team ensures every order is completed to the highest standard.</p>
 						</div>
 						<div class="about-box">
-							<h5><i class="icon icon-Time"></i>Avilability</h5>
+							<h5><i class="icon icon-Time"></i>Availability</h5>
 							<p>With a wide range of stock, we ensure consistent product availability so you can get what you need, when you need it.</p>
 						</div>
 					</div>
