--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@
 							<p><i class="icon icon-Phone2"></i> <span>Tel</span><a href="tel:020-8841-1211" title=": 020 8841 1221"> : 020 8841 1221 </a></p>
 							<p><i class="icon icon-Mail"></i> <span>Email</span><a href="mailto:eec177@gmail.com" title=": eec177@gmail.com"> : eec177@gmail.com</a></p>
 							<p><i class="icon icon-Time"></i> <span>Working Hours </span> : 8:00 a.m - 17:30 p.m</p>
+							<p><i class="icon icon-Time"></i> <span>Saturday </span> : 8:00 a.m - 13:00 p.m</p>
 						</aside>
 					</div>
 					<!-- Widget Info /- -->
